--- a/src/App.css
+++ b/src/App.css
@@ -8,12 +8,18 @@ html {
   background-size: cover;
 }
 
-/* body {
-  margin-top: -2em;
-} */
+a:link {
+  color: white;
+}
+
+/* visited link */
+a:visited {
+  color: white;
+}
 
 .App {
   text-align: center;
+  min-height: calc(100vh - 20px);
 }
 
 .App-logo {
