--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,10 @@ body,
 html {
   height: 100%;
   background-image: url("./img/background.png");
-  height: 100%;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  font-family: "IBM Plex Sans", sans-serif;
 }
 
 a:link {
