--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-body,
 html {
   height: 100%;
   background-image: url("./img/background.png");
@@ -19,12 +18,8 @@ a:visited {
 
 .App {
   text-align: center;
-  min-height: calc(100vh - 20px);
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+  /* min-height: calc(100vh - 20px); */
+  /* margin-top: 10rem; */
 }
 
 .game {
@@ -35,6 +30,27 @@ a:visited {
   border-radius: 1em;
 }
 
-.correct {
-  background-color: green;
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (max-width: 600px) {
+  .game {
+    width: 85%;
+  }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+  .game {
+    width: 45%;
+  }
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+  .game {
+    width: 35%;
+  }
+}
+
+.container {
+  margin-top: 10vh;
 }
