--- a/src/App.css
+++ b/src/App.css
@@ -7,12 +7,11 @@ html {
   font-family: "IBM Plex Sans", sans-serif;
 }
 
-a:link {
+footer a:link {
   color: white;
 }
 
-/* visited link */
-a:visited {
+footer a:visited {
   color: white;
 }
 
