--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,20 @@
 html {
   height: 100%;
+  margin-top: 0;
+  /* background-image: url("./img/background.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover; */
+  /* margin-top: -4vh; */
+  /* font-family: "IBM Plex Sans", sans-serif; */
+}
+
+body {
+  height: 100%;
   background-image: url("./img/background.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  font-family: "IBM Plex Sans", sans-serif;
 }
 
 footer a:link {
@@ -27,6 +37,7 @@ footer a:visited {
   padding: 1em;
   margin: 0px auto;
   border-radius: 1em;
+  border: 1px solid white;
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
