--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,5 @@
 html {
   height: 100%;
-  margin-top: 0;
-  /* background-image: url("./img/background.png");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover; */
-  /* margin-top: -4vh; */
-  /* font-family: "IBM Plex Sans", sans-serif; */
 }
 
 body {
@@ -15,6 +8,7 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  margin: 0;
 }
 
 footer a:link {
@@ -27,8 +21,6 @@ footer a:visited {
 
 .App {
   text-align: center;
-  /* min-height: calc(100vh - 20px); */
-  /* margin-top: 10rem; */
 }
 
 .game {
@@ -59,8 +51,4 @@ footer a:visited {
   .game {
     width: 35%;
   }
-}
-
-.container {
-  margin-top: 4vh;
 }
