--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,6 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  margin: 0;
 }
 
 footer a:link {
@@ -19,6 +18,12 @@ footer a:visited {
   color: white;
 }
 
+#root {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
 .App {
   text-align: center;
 }
